--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Using asset bundles for Odoo 16+ -->
-    <template id="assets_frontend_inherit" inherit_id="web.assets_frontend">
-        <xpath expr="." position="inside">
-            <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
-        </xpath>
-    </template>
+    <!-- Odoo 17 assets bundle definition -->
+    <data>
+        <!-- Define frontend assets bundle -->
+        <template id="assets_frontend" inherit_id="website.assets_frontend" name="Survey Match Following Frontend Assets">
+            <xpath expr="//script[last()]" position="after">
+                <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
+            </xpath>
+            <xpath expr="//link[last()]" position="after">
+                <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
+            </xpath>
+        </template>
 
-    <template id="assets_backend_inherit" inherit_id="web.assets_backend">
-        <xpath expr="." position="inside">
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
-        </xpath>
-    </template>
+        <!-- For survey specific assets in Odoo 17 -->
+        <template id="survey_assets" inherit_id="survey.survey_assets" name="Survey Match Following Survey Assets">
+            <xpath expr="//script[last()]" position="after">
+                <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
+            </xpath>
+            <xpath expr="//link[last()]" position="after">
+                <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
+            </xpath>
+        </template>
 
-    <!-- For survey specific pages, try other common templates -->
-    <template id="survey_assets_inherit" inherit_id="survey.assets_frontend_survey" name="Survey Match Following Assets">
-        <xpath expr="." position="inside">
-            <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
-            <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
-        </xpath>
-    </template>
+        <!-- Alternative approach for survey pages -->
+        <template id="layout_assets" inherit_id="survey.layout" name="Survey Layout Assets">
+            <xpath expr="//head" position="inside">
+                <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
+                <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
+            </xpath>
+        </template>
+    </data>
 </odoo>
