--- a/views/assets.xml
+++ b/views/assets.xml
@@ -2,28 +2,24 @@
 <odoo>
     <!-- Odoo 17 assets bundle definition -->
     <data>
-        <!-- Define frontend assets bundle -->
+        <!-- Define frontend assets bundle using website.assets_frontend -->
         <template id="assets_frontend" inherit_id="website.assets_frontend" name="Survey Match Following Frontend Assets">
-            <xpath expr="//script[last()]" position="after">
+            <xpath expr="." position="inside">
                 <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
-            </xpath>
-            <xpath expr="//link[last()]" position="after">
                 <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
             </xpath>
         </template>
 
-        <!-- For survey specific assets in Odoo 17 -->
-        <template id="survey_assets" inherit_id="survey.survey_assets" name="Survey Match Following Survey Assets">
-            <xpath expr="//script[last()]" position="after">
+        <!-- For survey specific assets - using known template IDs in Odoo 17 -->
+        <template id="assets_common" inherit_id="web.assets_common" name="Survey Match Following Common Assets">
+            <xpath expr="." position="inside">
                 <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
-            </xpath>
-            <xpath expr="//link[last()]" position="after">
                 <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
             </xpath>
         </template>
-
-        <!-- Alternative approach for survey pages -->
-        <template id="layout_assets" inherit_id="survey.layout" name="Survey Layout Assets">
+        
+        <!-- Using survey.survey_layout which is more likely to exist -->
+        <template id="survey_layout_inherit" inherit_id="survey.survey_layout" name="Survey Layout Assets">
             <xpath expr="//head" position="inside">
                 <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
                 <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
