Add match following container styling, update JavaScript selector, and create asset definition for survey match following

--- a/static/src/css/survey_match_following.css
+++ b/static/src/css/survey_match_following.css
@@ -1,3 +1,8 @@
+/* Basic styling for match following questions */
+.match_following_container {
+    margin: 20px 0;
+}
+
 /* Match Following Container */
 .o_survey_match_following_wrapper {
     margin: 20px 0;
