Refactor asset definitions for survey match following; update dependencies, streamline asset inclusion, and introduce minimal asset templates.

--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Simplified asset definition -->
-    <template id="assets_frontend" inherit_id="website.assets_frontend">
+    <!-- For Odoo 17, use web.assets_web and web.assets_frontend_minimal -->
+    <template id="assets_web" inherit_id="web.assets_web">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/custom_elearn/static/src/js/survey_match_following.js"/>
             <link rel="stylesheet" href="/custom_elearn/static/src/css/survey_match_following.css"/>
